Avoid overlapping home button

--- a/beta/styles.css
+++ b/beta/styles.css
@@ -171,9 +171,20 @@ body.about {
   margin-top: 1em;
 }
 
+
+.home-float-space {
+  float: right;
+  --size: 3em;
+  width: var(--size);
+  height: var(--size);
+}
+
 @media (min-width: 768px) {
   .about-container {
     max-width: 70vw;
+  }
+  .home-float-space {
+    display: none;
   }
 }
 
